<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etxt_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_marginRight="@dimen/min_margin"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/comment_hint"
            android:inputType="textPersonName"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llay_base_stats"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_weight="0.1"
            android:background="@android:color/transparent"
            android:onClick="editComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_weight="0.1"
            android:background="@android:color/transparent"
            android:onClick="saveFav"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/star_big_off" />

        <ImageView
            android:id="@+id/imv_pokemon_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/card"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_weight="1"
            android:onClick="showSprite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pokemon_name"
            app:url="@{pokemon.getSprite(0)}"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/llay_base_stats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_marginRight="@dimen/min_margin"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding="@dimen/rounder_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imv_pokemon_image"
            app:layout_constraintTop_toBottomOf="@+id/txt_pokemon_name">

            <TextView
                android:id="@+id/txt_hp_sattack_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text='@{@string/hp+ pokemon.getStats(0)+ " | "+@string/s_attack +pokemon.getStats(3)}'
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/txt_attack_sdefense_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text='@{@string/attack+ pokemon.getStats(1)+ " | "+@string/s_defense+pokemon.getStats(4)}'
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/txt_defense_speed_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text='@{@string/defense+ pokemon.getStats(2)+ " | "+@string/speed+pokemon.getStats(5)}'
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/txt_order_baseexp_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text='@{@string/order +String.valueOf(pokemon.order)+" | "+ @string/base_exp +String.valueOf(pokemon.base_experience)}'
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/txt_weight_height_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text='@{@string/weight +String.valueOf(pokemon.weight)+" | "+@string/height +String.valueOf(pokemon.height)}'
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginTop="@dimen/mid_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_marginRight="@dimen/min_margin"
            android:layout_weight="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etxt_comment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_species_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginRight="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/rounded"
                    android:gravity="center"
                    android:padding="@dimen/rounder_padding"
                    android:text='@{@string/species+ pokemon.getSpecies()}'
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_mid_size" />

                <TextView
                    android:id="@+id/txt_forms_value"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginRight="@dimen/big_margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:gravity="center"
                    android:padding="@dimen/rounder_padding"
                    android:text='@{@string/forms+ pokemon.getFormsString()}'
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_mid_size" />

                <LinearLayout
                    android:id="@+id/llay_other_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/rounded"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="@dimen/rounder_padding">

                    <TextView
                        android:id="@+id/txt_moves_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/moves"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_mid_size" />

                    <TextView
                        android:id="@+id/txt_moves_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{pokemon.getMovesString()}' />

                    <TextView
                        android:id="@+id/txt_abilities_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/abilities"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_mid_size" />

                    <TextView
                        android:id="@+id/txt_abilities_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{pokemon.getAbilityString()}' />

                    <TextView
                        android:id="@+id/txt_helditem_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/held_items"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_mid_size" />

                    <TextView
                        android:id="@+id/txt_helditem_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{pokemon.getHeldItemsString()}' />

                    <TextView
                        android:id="@+id/txt_gameindice_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/game_indices"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_mid_size" />

                    <TextView
                        android:id="@+id/txt_gameindice_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{pokemon.getgetGameIndiceString()}' />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/txt_pokemon_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_marginRight="@dimen/min_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@{pokemon.name}"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_big_size"
            app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="pokemon"
            type="com.example.pocedex.data.Pokemon" />

    </data>
</layout>